register/login flow

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
-PORT=8080
-ORIGIN=localhost:8080
+PORT=8000
+ORIGIN=localhost:8000
 MONGODB_URI=mongodb+srv://linaharry709:yngWIE500@cluster0.zk3kp.mongodb.net/standard-express?retryWrites=true&w=majority&appName=Cluster0
+
+ACCESS_TOKEN_KEY=$2a$12$/ZEnfrZicb/pxbOLxeFOUewncYGrfFYi7r4FoS4n1Q59EP4dVHUHG
+ACCESS_TOKEN_EXP=1d
+
+REFRESH_TOKEN_KEY=$2a$12$S.N4.61ieCy0DAznx0DFqeJKmn1TnRdw530lG60.y3EVoUr/9mLti
+REFRESH_TOKEN_EXP=1d
+
+CLOUDINARY_API_SECRET=h31Kj-I9GuH7c2NCXMSSjst9NtA
